--- a/singlePage.html
+++ b/singlePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nome del Gruppo</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="singlePage.css">
 </head>
 <body>
     <!-- Intestazione -->
