--- a/singlePage.html
+++ b/singlePage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nome del Gruppo</title>
+    <title>Scacco Matto</title>
     <link rel="stylesheet" href="singlePage.css">
 </head>
 <body>
@@ -39,14 +39,17 @@
     <section id="tour">
         <h2>Prossimi Concerti</h2>
         <ul>
-            <li>Data, Location</li>
-            <li>Data, Location</li>
+            <li>01/07/2025, Palermo</li>
+            <li>02/07/2025, Catania</li>
+            <li>03/07/2025, Messina</li>
+            <li>04/07/2025, Ragusa</li>
+            <li>05/07/2025, Siracusa</li>
         </ul>
     </section>
 
     <!-- Contatti -->
     <section id="contatti">
-        <h2>Contattaci</h2>
+        <h2>Contattaci per eventuali richieste</h2>
         <form action="submit_form.php" method="POST">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome">
@@ -59,7 +62,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 Nome del Gruppo</p>
+        <p>© 2025 Scacco Matto</p>
         <div class="social">
             <a href="https://www.instagram.com/gruppo">Instagram</a>
             <a href="https://www.facebook.com/gruppo">Facebook</a>
