--- a/singlePage.html
+++ b/singlePage.html
@@ -49,7 +49,7 @@
 
     <!-- Contatti -->
     <section id="contatti">
-        <h2>Contattaci per eventuali richieste</h2>
+        <h2>Contattaci</h2>
         <form action="submit_form.php" method="POST">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome">
