--- a/singlePage2.html
+++ b/singlePage2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Single Page Example</title>
+    <title>Scacco Matto Live Band</title>
     <link rel="stylesheet" href="singlePage2.css">
 </head>
 <body>
@@ -11,34 +11,40 @@
     <!-- Navigazione -->
     <nav>
         <ul>
-            <li><a href="#section1">Sezione 1</a></li>
-            <li><a href="#section1">Sezione 2</a></li>
-            <li><a href="#section2">Sezione 3</a></li>
-            <li><a href="#section3">Sezione 4</a></li>
+            <li><a href="#biografia">Biografia</a></li>
+            <li><a href="#musica">Musica</a></li>
+            <li><a href="#tour">Tour</a></li>
+            <li><a href="#contatti">Contatti</a></li>
         </ul>
     </nav>
 
     <!-- Sezione 1 -->
-    <section id="section1">
-        <h2>Benvenuto alla Sezione 1</h2>
+    <section id="biografia">
+        <h2>Benvenuto alla sezione Biografia/h2>
         <p>Questa è la prima sezione della tua pagina single page. Puoi aggiungere testo, immagini o qualsiasi altro contenuto qui.</p>
     </section>
 
     <!-- Sezione 2 -->
-    <section id="section2">
-        <h2>Benvenuto alla Sezione 2</h2>
+    <section id="musica">
+        <h2>Benvenuto alla sezione Musica</h2>
         <p>Questa è la seconda sezione. Puoi personalizzare il contenuto come desideri.</p>
     </section>
 
     <!-- Sezione 3 -->
-    <section id="section3">
-        <h2>Benvenuto alla Sezione 3</h2>
-        <p>Questa è la terza e ultima sezione della tua pagina single page.</p>
+    <section id="tour">
+        <h2>Benvenuto alla sezione Tour</h2>
+        <p>Questa è la terza sezione della tua pagina single page.</p>
+    </section>
+    
+    <!-- Sezione 4 -->
+    <section id="contatti">
+        <h2>Benvenuto alla sezione Contatti</h2>
+        <p>Questa è la quarta e ultima sezione della tua pagina single page.</p>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Il Tuo Nome. Tutti i diritti riservati.</p>
+        <p>&copy; 2025 Scacco Matto Live Band. Tutti i diritti riservati.</p>
     </footer>
 
 </body>
