--- a/singlePage2.html
+++ b/singlePage2.html
@@ -20,7 +20,7 @@
 
     <!-- Sezione 1 -->
     <section id="biografia">
-        <h2>Benvenuto alla sezione Biografia/h2>
+        <h2>Benvenuto alla sezione Biografia</h2>
         <p>Questa è la prima sezione della tua pagina single page. Puoi aggiungere testo, immagini o qualsiasi altro contenuto qui.</p>
     </section>
 
