--- a/singlePage2.html
+++ b/singlePage2.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scacco Matto Live Band</title>
     <link rel="stylesheet" href="singlePage2.css">
+    <script src="singlePage2.js"></script>
 </head>
 <body>
 
-    <!-- Navigazione -->
-    <nav>
-        <ul>
+   <nav>
+        <div class="hamburger" onclick="toggleMenu()">☰</div>
+        <ul class="mobile-menu">
             <li><a href="#biografia">Biografia</a></li>
             <li><a href="#musica">Musica</a></li>
             <li><a href="#tour">Tour</a></li>
